Add the four remaining views, and the mount recorder behind them
Frame-by-frame, million lockers, thread-per-request and the workaround
each get a tab and a runnable snippet. The load package records where
carriers mount and where they pin, which is what the mount board draws.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>