@@ -1,6 +1,5 @@
 package loomdemo.ui;
 
-import javafx.animation.PauseTransition;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.control.Button;
@@ -12,59 +11,51 @@ import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.Region;
 import javafx.scene.layout.VBox;
-import javafx.util.Duration;
 import loomdemo.DemoTab;
 import loomdemo.exec.ChildJvmRunner;
-import loomdemo.exec.Snippet;
-import loomdemo.exec.SourceCompiler;
+import loomdemo.exec.LockerSnippet;
 
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 /**
- * The opening demo: two threads, five lines each, and an order nobody chose.
+ * Tab 5: a million lockers — {@code ThreadLocal} vs {@code ScopedValue} (talk slide 40).
  *
- * <p>Same shape as {@link ThreadBombTab} — editable source on the left, live output on the
- * right, executed in a child JVM — with three differences that all come from this being
- * the tab the presenter re-runs over and over:
+ * <p>Structurally this is {@link ThreadPerRequestTab} — a {@link SegmentedPicker} over a small
+ * snippet enum, an editable {@link JavaCodeArea}, and a {@link StreamConsole} that keeps runs
+ * stacked under {@code ──── Run #N ────} dividers so the two measured numbers sit on screen
+ * together — with two deliberate differences:
  *
  * <ul>
- *   <li>The console is <em>not</em> cleared between runs. Each run is separated by a
- *       {@code ──── Run #N ────} rule so consecutive runs can be compared on screen, which
- *       is the entire point of a demo about non-deterministic ordering.
- *   <li>Lines are coloured by the thread that printed them, so the interleaving reads from
- *       the back of the room without anyone parsing text.
- *   <li>The source is compiled ahead of time by {@link SourceCompiler}, so Run starts a
- *       JVM instead of a compiler. That is the difference between roughly 250 ms and
- *       roughly 25 ms to the first line — between "watch it again" and an awkward pause.
+ *   <li><strong>No precompile.</strong> {@code ScopedValue} is a preview API on the bundled
+ *       JDK 21, and {@link loomdemo.exec.SourceCompiler} does not enable preview, so it would
+ *       reject the snippet. Every run goes straight through the source launcher with
+ *       {@link #JVM_ARGS}. The ~250&nbsp;ms compile is invisible next to a run that serves ten
+ *       thousand requests.</li>
+ *   <li><strong>Preview JVM args.</strong> {@code --enable-preview --source 21} to run the
+ *       preview {@code ScopedValue} API, plus a modest {@code -Xmx} with room for the leaked
+ *       contexts (the {@code ThreadLocal} snippet strands a few hundred MB on purpose).</li>
  * </ul>
+ *
+ * <p>Only {@code main} prints, so unlike the other snippet tabs there is no per-thread colouring.
  */
-public final class Threads101Tab implements DemoTab {
+public final class MillionLockersTab implements DemoTab {
 
     /**
-     * Snippet output looks like {@code Cook#1 receives Order #2} or {@code Cook#1 -> 3}.
-     * Group 1 is who is speaking. A line that opens with neither form — {@code kitchen
-     * closed} — is main talking about the kitchen rather than a cook, and stays uncoloured.
+     * Source-launcher flags for every run. {@code --source 21} + {@code --enable-preview} run
+     * the {@code ScopedValue} preview API; {@code -Xmx2g} leaves comfortable room for the few
+     * hundred MB the {@code ThreadLocal} snippet strands on its idle pool.
      */
-    private static final Pattern SPEAKER =
-            Pattern.compile("^(\\S+)\\s+(?:->|receives|serves)\\s");
-
-    private static final List<String> SPEAKER_STYLES =
-            List.of("speaker-a", "speaker-b", "speaker-c");
-
-    /** Long enough that typing doesn't trigger a compile per keystroke. */
-    private static final Duration RECOMPILE_DELAY = Duration.millis(400);
+    private static final List<String> JVM_ARGS =
+            List.of("-Xmx2g", "--enable-preview", "--source", "21");
 
     private final JavaCodeArea editor = new JavaCodeArea();
     private final StreamConsole console = new StreamConsole();
     private final ChildJvmRunner runner = new ChildJvmRunner();
-    private final SourceCompiler compiler = new SourceCompiler();
 
-    private final SnippetPicker picker = new SnippetPicker();
+    private final SegmentedPicker<LockerSnippet> picker = new SegmentedPicker<>(
+            List.of(LockerSnippet.values()),
+            LockerSnippet::label,
+            LockerSnippet.values()[0]);
     private final Button runButton = new Button("▶  Run");
     private final Button stopButton = new Button("Stop");
     private final Label caption = new Label();
@@ -72,19 +63,13 @@ public final class Threads101Tab implements DemoTab {
     private final HBox confirmBar;
     private final VBox node;
 
-    /**
-     * Thread name to colour, assigned on first sight and kept until the console is
-     * cleared. Stable assignment is the requirement: if Cook#1 were re-coloured each run,
-     * comparing one run against the one above it would mean nothing.
-     */
-    private final Map<String, String> speakerStyles = new LinkedHashMap<>();
-
-    private final PauseTransition recompile = new PauseTransition(RECOMPILE_DELAY);
-
-    private Snippet snippet = Snippet.values()[0];
+    private LockerSnippet snippet = LockerSnippet.values()[0];
     private int runCount;
 
-    public Threads101Tab() {
+    /** Guards against a programmatic {@code picker.setValue} re-entering its own listener. */
+    private boolean suppressPickerSync;
+
+    public MillionLockersTab() {
         confirmBar = buildConfirmBar();
         VBox editorFrame = buildEditorFrame();
 
@@ -101,35 +86,37 @@ public final class Threads101Tab implements DemoTab {
 
         console.setClearAction(this::clearOutput);
 
-        // Compile in the background whenever the buffer settles, so Run is never the
-        // thing waiting on javac.
-        recompile.setOnFinished(e -> compiler.prepare(editor.getSource()));
-        editor.sourceProperty().addListener((obs, was, is) -> recompile.playFromStart());
-
         loadSnippet(snippet);
         setRunning(false);
     }
 
     private FlowPane buildControls() {
-        picker.setGuard(requested -> {
-            if (editor.isDirty()) {
-                showConfirm(requested);
-                return false;
+        // SegmentedPicker has no vetoable guard, so the "discard my edits?" question is asked
+        // here: on a dirty buffer, revert the picker and show the confirm bar instead.
+        picker.valueProperty().addListener((obs, was, is) -> {
+            if (suppressPickerSync) {
+                return;
             }
-            return true;
+            if (editor.isDirty()) {
+                suppressPickerSync = true;
+                picker.setValue(was);
+                suppressPickerSync = false;
+                showConfirm(is);
+                return;
+            }
+            switchTo(is);
         });
-        picker.snippetProperty().addListener((obs, was, is) -> switchTo(is));
 
         runButton.getStyleClass().add("run-button");
         runButton.setOnAction(e -> runDemo());
         runButton.setTooltip(new Tooltip(
-                "Run this code in a separate JVM  (⌘R)\nRun it more than once."));
+                "Run this code in a separate JVM  (⌘R)\nServes 10,000 requests through a reused pool."));
 
         stopButton.getStyleClass().add("secondary-button");
         stopButton.setOnAction(e -> stopDemo());
         stopButton.setTooltip(new Tooltip("Kill the child JVM  (⌘.)"));
 
-        Label note = new Label("Runs stack up in the console so you can compare them.");
+        Label note = new Label("Runs stack up in the console so you can compare the two numbers.");
         note.getStyleClass().add("caption");
         note.setWrapText(true);
         note.setMaxWidth(360);
@@ -137,8 +124,6 @@ public final class Threads101Tab implements DemoTab {
         runButton.setMinWidth(Region.USE_PREF_SIZE);
         stopButton.setMinWidth(Region.USE_PREF_SIZE);
 
-        // FlowPane rather than HBox: at 130% presentation fonts these controls no longer
-        // fit on one line, and wrapping beats truncating the snippet names to "...".
         FlowPane bar = new FlowPane(12, 8, picker.getNode(), runButton, stopButton, note);
         bar.setAlignment(Pos.CENTER_LEFT);
         return bar;
@@ -202,7 +187,7 @@ public final class Threads101Tab implements DemoTab {
         return bar;
     }
 
-    private void showConfirm(Snippet requested) {
+    private void showConfirm(LockerSnippet requested) {
         Object[] parts = (Object[]) confirmBar.getUserData();
         Label message = (Label) parts[0];
         Button discard = (Button) parts[1];
@@ -210,7 +195,10 @@ public final class Threads101Tab implements DemoTab {
                 + "\" will replace it.");
         discard.setOnAction(e -> {
             hideConfirm();
-            picker.setSnippet(requested);   // bypasses the guard, fires the listener
+            suppressPickerSync = true;
+            picker.setValue(requested);   // move the buttons without re-asking
+            suppressPickerSync = false;
+            switchTo(requested);
         });
         confirmBar.setVisible(true);
         confirmBar.setManaged(true);
@@ -221,15 +209,14 @@ public final class Threads101Tab implements DemoTab {
         confirmBar.setManaged(false);
     }
 
-    private void switchTo(Snippet target) {
+    private void switchTo(LockerSnippet target) {
         snippet = target;
         loadSnippet(target);
     }
 
-    private void loadSnippet(Snippet target) {
+    private void loadSnippet(LockerSnippet target) {
         editor.loadSource(target.source());
         caption.setText(target.caption());
-        compiler.prepare(target.source());
     }
 
     @Override
@@ -245,15 +232,12 @@ public final class Threads101Tab implements DemoTab {
         }
         console.appendDivider("──── Run #" + runCount + " ────");
 
-        String source = editor.getSource();
-        Optional<SourceCompiler.Compiled> compiled = compiler.ready(source);
-
         setRunning(true);
         ChildJvmRunner.Listener listener = new ChildJvmRunner.Listener() {
             @Override
             public void onLines(List<String> lines) {
                 for (String line : lines) {
-                    console.appendLine(line, styleFor(line));
+                    console.appendLine(line);
                 }
             }
 
@@ -281,31 +265,10 @@ public final class Threads101Tab implements DemoTab {
             }
         };
 
-        if (compiled.isPresent()) {
-            runner.startCompiled(compiled.get().classDir(), compiled.get().mainClass(),
-                    List.of(), listener);
-        } else {
-            // Not compiled yet, or the presenter's edit does not compile. The source
-            // launcher is slower but it prints the real javac error, which is what you
-            // want on screen when you have just broken the code in front of everyone.
-            runner.start(source, List.of(), listener);
-        }
-    }
-
-    /** Which colour this line gets, based on who printed it. */
-    private String styleFor(String line) {
-        Matcher matcher = SPEAKER.matcher(line);
-        if (!matcher.find()) {
-            return null;
-        }
-        String name = matcher.group(1);
-        String existing = speakerStyles.get(name);
-        if (existing != null) {
-            return existing;
-        }
-        String assigned = SPEAKER_STYLES.get(speakerStyles.size() % SPEAKER_STYLES.size());
-        speakerStyles.put(name, assigned);
-        return assigned;
+        // Always the source launcher: ScopedValue is a preview API here, so there is no
+        // precompiled fast path to take. The launcher also prints the real javac/preview
+        // error when the presenter has broken the code.
+        runner.start(editor.getSource(), JVM_ARGS, listener);
     }
 
     private void setRunning(boolean running) {
@@ -324,13 +287,11 @@ public final class Threads101Tab implements DemoTab {
     public void clearOutput() {
         console.clear();
         runCount = 0;
-        speakerStyles.clear();
     }
 
     @Override
     public void shutdown() {
         runner.stop();
-        compiler.shutdown();
     }
 
     public VBox getNode() {
